# UDL-Pattern-Benchmarking

./: .coverage  .deepsource.toml  .gitignore  AGENTS.md  README-CTM.md  README.md  SETUP_COMPLETE.md  calculate_expected_values.py  config_example.yaml  coverage_history.db  coverage_validation.json  debug_broken.py  debug_example.py  main.py  pyproject.toml  pytest.ini  python_lint_errors.json  requirements-udl.txt  requirements.txt  setup.py
.github/workflows/: coverage-monitoring.yml  documentation-validation.yml
.hypothesis/constants/: 02f0121e58f76d82  0582db66f2a68901  08061e405161cdf8  0aa92b8971adebc0  0ae22e82590a9115  0e7b00dfbaf324c5  0ec013d7ce7c8c8f  12923e11e1fd7cf5  1296fc89209b55d5  129ea3053716d767  139f6f91fd6d02b1  187d9b204ea1ec16  1c191e34f066d53b  20273987f9f6e574  23f8b2cdc8e089ce  25c9c2c5c6f57dcb  26a922737d79d27e  2afd6cc696731963  2b5a133e6c878721  2bf28f08ca0f257f  31d2be872c63bb4d  3302a884d37edca9  3307d3e67cc174fe  332ec1fa78da590b  33b41c04f58448b2  34615ba419aced80  35cea83bd1267662  38c12a2773aea597  3af368a54147b2dc  3c9d3417673401ce  419bf91ec59f251e  43cb542be3283825  4608d3274f59f201  4799c8178148d45c  48a6f3088af1fec7  4abbef773a502be9  4b3b9c0358eb669f  4e1d620fb21b3ffc  4fd3a6e2646641f5  521e926640e127d0  (+86 more)
.kiro/steering/: python-environment.md
data/: custom_datasets.py
demo_visualizations/: index.html
demo_visualizations/realtime/: metric_comparison.html  metrics_export_1765451408.json  metrics_export_1766104907.json  metrics_export_1766105028.json  performance_monitor.html  realtime_dashboard.html
demo_visualizations/web/: comprehensive_dashboard.html  ctm_animation.html  dependency_flow.html  grammar_graph.html  metrics_dashboard.html
demo_visualizations/webgl/: 3d_grammar_graph.html  ctm_3d_animation.html
deployment/: DEPLOYMENT_SUMMARY.md  README.md
deployment/api/: main.py  requirements.txt
deployment/client/: javascript_client.js  python_client.py
deployment/docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
deployment/examples/: test_api.py
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
docs/: API_VALIDATION_REPORT.md  AUDIT_REPORT.md  LINTING.md  README.md  SETUP_COMPLETE.md  STRUCTURE_VALIDATION_REPORT.md  STYLE_GUIDE.md  api_inventory.md  api_reference.rst  architecture_diagrams.py  audit_report.json  conf.py  coverage_report.md  examples.rst  formula_inventory.md  integration_guide.md  mathematical_framework.aux  mathematical_framework.tex  mathematical_framework.toc  troubleshooting.rst
examples/: 01_mnist.ipynb  03_mazes.ipynb  04_parity.ipynb
integration_examples/: batch_processing_example.py  cicd_example.py  git_hooks_example.py
models/: constants.py  ctm.py  ctm_qamnist.py  ctm_rl.py  ctm_sort.py  ff.py  lstm.py  lstm_qamnist.py  lstm_rl.py  modules.py  resnet.py  utils.py
output/: rating_results.json
scripts/: api_diff.py  check_docstrings.py  check_links.py  compile_audit_findings.py  coverage_monitor.py  find_orphaned_files.py  run_examples.py  validate_anchors.py  validate_init_exports.py  validate_test_documentation.py  verify_dependencies.py  verify_imports.py  verify_structure.py  verify_test_correspondence.py
tests/: README.md  __init__.py  conftest.py  coverage_analysis.md  coverage_maintenance_guidelines.md  documentation_validation_coverage_report.md  final_coverage_report.md  task_35_10_completion_summary.md  test_advanced_metrics.py  test_aggregation_confidence.py  test_analytics.py  test_api_endpoint_documentation.py  test_api_integration.py  test_api_validation_properties.py  test_audit_reporter.py  test_caching_comprehensive.py  test_cli_integration.py  test_cli_option_accuracy.py  test_code_file_references.py  test_comparison_engine.py  test_completeness_metric.py  test_consistency_metric.py  test_ctm_adapter.py  test_data.py  test_deployment.py  test_docstring_validation.py  test_enhanced_visualizations.py  test_env_var_documentation.py  test_error_injection_fault_tolerance.py  test_evaluation_suite.py  test_example_execution_properties.py  test_example_validation.py  test_expressiveness_metric.py  test_file_discovery.py  test_final_integration.py  test_integration_features.py  test_link_validation_properties.py  test_mathematical_formula_validation.py  test_metric_properties.py  test_ml_enhancements.py  (+18 more)
udl_rating_framework/: __init__.py
utils/: housekeeping.py  losses.py  samplers.py  schedulers.py
(+264 files in other folders)
