[project]
name = "continuous-thought-machines"
version = "0.1.0"
description = "UDL Rating Framework - A mathematically-grounded system for evaluating User Defined Languages built on Continuous Thought Machine architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision",
    "scipy>=1.10.0",
    "scikit-learn",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "opencv-python",
    "imageio",
    "tqdm",
    "python-dotenv",
    "umap-learn",
    "gymnasium",
    "minigrid",
    "datasets",
    "autoclip",
    "huggingface_hub",
    "safetensors",
    "statsmodels>=0.14.0",
    "hypothesis>=6.0.0",
    "lark>=1.1.0",
    "click>=8.1.0",
    "tensorboard>=2.20.0",
    "h5py>=3.8.0",
    "pyyaml>=6.0",
    "pandas>=1.5.0",
    "psutil>=7.1.3",
    "memory-profiler>=0.61.0",
    # Deployment dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
udl-rating = "udl_rating_framework.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

docs = [
    "sphinx>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["udl_rating_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
