[project]
name = "continuous-thought-machines"
version = "0.1.0"
description = "UDL Rating Framework - A mathematically-grounded system for evaluating User Defined Languages built on Continuous Thought Machine architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision",
    "scipy>=1.10.0",
    "scikit-learn",
    "networkx>=3.0",
    "pandas>=1.5.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pillow>=10.0.0",
    # Image/video processing
    "opencv-python",
    "imageio",
    # ML/AI frameworks
    "umap-learn",
    "gymnasium",
    "minigrid",
    "datasets",
    "autoclip",
    "huggingface_hub",
    "safetensors",
    # Testing
    "hypothesis>=6.0.0",
    # CLI and config
    "click>=8.1.0",
    "pyyaml>=6.0",
    # Utilities
    "tqdm",
    "h5py>=3.8.0",
    "psutil>=7.1.3",
    "memory-profiler>=0.61.0",
    # Tensorboard for RL training
    "tensorboard>=2.20.0",
    # Deployment dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    # Notebook execution
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "jupyter>=1.1.1",
]

[project.scripts]
udl-rating = "udl_rating_framework.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

docs = [
    "sphinx>=6.0.0",
]

# Optional dependencies for advanced features
distributed = [
    "ray>=2.0.0",
    "dask>=2023.1.0",
    "dask[distributed]>=2023.1.0",
]

gpu = [
    "cupy>=12.0.0",
]

ml = [
    "optuna>=3.0.0",
    "transformers>=4.30.0",
]

animation = [
    "manim>=0.17.0",
]

all = [
    "continuous-thought-machines[distributed,gpu,ml,animation]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["udl_rating_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=udl_rating_framework --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "integration: Integration tests",
    "performance: Performance tests",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
